# katastr_nemovitost_czu_server

./: Cargo.toml  script.js  test_endpoints.py
src/: db.rs  lib.rs  main.rs  middleware.rs  models.rs  templates.rs
src/endpoints/: auth.rs  crud.rs  health.rs  lv.rs  mod.rs  parcela.rs  rizeni.rs
